# Assignment-2

./: delete_later.ipynb  delete_later2.ipynb  main.py  pyproject.toml
regression/: logreg.py
test/: test_logreg.py
