[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regression"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "matplotlib >= 3.5", 
    "numpy >= 1.21", 
    "pandas >= 1.3", 
    "scikit-learn >= 1.0", 
    "pytest >= 6.0"
]