[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regression"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "matplotlib >= 3.0", 
    "numpy >= 1.0", 
    "pandas >= 1.0", 
    "scikit-learn >= 1.0", 
    "pytest >= 5.0"
]