[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regression"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "python == 3.10.1",
    "matplotlib", 
    "numpy", 
    "pandas", 
    "scikit-learn", 
    "pytest"
]